--- a/letsupgrad/Assignment 1.html
+++ b/letsupgrad/Assignment 1.html
@@ -26,12 +26,12 @@
             <tr>
                 <td>Aman</td>
                 <td>Aman@gmail.com</td>
-                <td><img src="download.jpg" height="50px" width="50px"></td>
+                <td><img src="./download.jpg" height="50px" width="50px"></td>
             </tr>
             <tr>
                 <td>Shyam</td>
                 <td>shyam@gmail.com</td>
-                <td><img src="images.png" height="50px" width="50px"></td>
+                <td><img src="./images.png" height="50px" width="50px"></td>
             </tr>
         </table>
     </body>
